--- a/index.html
+++ b/index.html
@@ -3,13 +3,38 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/texts.css">
+    <title>DNA Fingerprinting</title>
 </head>
 
 <body>
 
+    <section class="container justify-content-center align-items-center d-flex h-100vh">
+        <div>
+            <h1 id="welcome-text" class="display-4">Welcome <span class="bold text-light-green">detective</span>, it
+                seems
+                like you are here
+                to learn more about
+                the ethics of
+                <span class="bold text-light-green">DNA fingerprinting</span>...<a href="./about.html">>>></a>
+            </h1>
+
+        </div>
+    </section>
+
+
+
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.slim.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.7/js/tether.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/typeit@8.0.2/dist/index.umd.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
