--- a/index.html
+++ b/index.html
@@ -8,20 +8,32 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/texts.css">
+    <link rel="stylesheet" href="./css/index.css">
     <title>DNA Fingerprinting</title>
 </head>
 
 <body>
-
+    <div class="text-right bruh ">
+        <img src="./img/dna_logo.png" alt="" class="img-fluid" id="cover-img">
+    </div>
     <section class="container justify-content-center align-items-center d-flex h-100vh">
         <div>
             <h1 id="welcome-text" class="display-4">Welcome <span class="bold text-light-green">detective</span>, it
                 seems
                 like you are here
                 to learn more about
-                the ethics of
-                <span class="bold text-light-green">DNA fingerprinting</span>...<a href="./about.html">>>></a>
+                the ethics behind
+                <span class="bold text-light-green">DNA fingerprinting</span>...
             </h1>
+
+            <a href="/about.html">
+                <div class="arrow mx-auto mt-5">
+                    <div class="arrow-top"></div>
+                    <div class="arrow-bottom"></div>
+                </div>
+            </a>
+
+
 
         </div>
     </section>
