--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
     <section class="navbar">
         <div class="container d-flex justify-content-end">
             <p class="lead">
-                <a href="/research.html">Next Page</a>
+                <a href="./research.html">Next Page</a>
             </p>
         </div>
     </section>
