--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <span class="bold text-light-green">DNA fingerprinting</span>...
             </h1>
 
-            <a href="/about.html">
+            <a href="./about.html">
                 <div class="arrow mx-auto mt-5">
                     <div class="arrow-top"></div>
                     <div class="arrow-bottom"></div>
