video of quiz page

--- a/index.html
+++ b/index.html
@@ -18,12 +18,7 @@
     </div>
     <section class="container justify-content-center align-items-center d-flex h-100vh">
         <div>
-            <h1 id="welcome-text" class="display-4">Welcome <span class="bold text-light-green">detective</span>, it
-                seems
-                like you are here
-                to learn more about
-                the ethics behind
-                <span class="bold text-light-green">DNA fingerprinting</span>...
+            <h1 id="welcome-text" class="display-4">
             </h1>
 
             <a href="./about.html">
