--- a/survey.html
+++ b/survey.html
@@ -16,10 +16,10 @@
 
     <!-- Start video hero -->
     <div class="video-hero jquery-background-video-wrapper demo-video-wrapper" id="video">
-        <video class="jquery-background-video" autoplay muted loop poster="./img/survey_bkg.jpg">
+        <!-- <video class="jquery-background-video" autoplay muted loop poster="./img/survey_bkg.jpg">
             <source src="./img/survey_bkg.mp4" type="video/mp4">
             <source src="./img/survey_bkg.webm" type="video/webm">
-        </video>
+        </video> -->
         <div class="video-overlay"></div>
         <div class="page-width">
             <div class="video-hero--content">
