--- a/survey.html
+++ b/survey.html
@@ -9,17 +9,17 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/texts.css">
     <link rel="stylesheet" href="./css/survey.css">
-    <title>Document</title>
+    <title>DNA Fingerprinting Survey</title>
 </head>
 
 <body>
 
     <!-- Start video hero -->
     <div class="video-hero jquery-background-video-wrapper demo-video-wrapper" id="video">
-        <!-- <video class="jquery-background-video" autoplay muted loop poster="./img/survey_bkg.jpg">
+        <video class="jquery-background-video" autoplay muted loop poster="./img/survey_bkg.jpg">
             <source src="./img/survey_bkg.mp4" type="video/mp4">
             <source src="./img/survey_bkg.webm" type="video/webm">
-        </video> -->
+        </video>
         <div class="video-overlay"></div>
         <div class="page-width">
             <div class="video-hero--content">
@@ -35,7 +35,8 @@
             <form onsubmit="formSubmit(event)" id="survey">
                 <div class="form-row align-items-center">
                     <div class="form-group col-md-8">
-                        <label class="my-1 mr-2" for="support_general">How much do you support DNA
+                        <label class="my-1 mr-2" for="support_general">How much do you <span
+                                class="text-light-green">support</span> DNA
                             fingerprinting?</label>
                     </div>
                     <div class="form-group col-md-4">
@@ -54,7 +55,7 @@
                 <div class="form-row align-items-center">
                     <div class="form-group col-md-8">
                         <label class="my-1 mr-2" for="support_solve_crime">How much do you support DNA fingerprinting
-                            being used in being used to solve crimes?</label>
+                            being used in being used to <span class="text-light-green">solve crimes?</span></label>
                     </div>
                     <div class="form-group col-md-4">
                         <select class="custom-select my-1 mr-sm-2" id="support_solve_crime" required>
@@ -71,7 +72,8 @@
 
                 <div class="form-row align-items-center">
                     <div class="form-group col-md-8">
-                        <label class="my-1 mr-2" for="bias">Do you think that there is bias in DNA
+                        <label class="my-1 mr-2" for="bias">Do you think that there is <span
+                                class="text-light-green">bias</span> in DNA
                             fingerprinting?</label>
                     </div>
                     <div class="form-group col-md-4">
@@ -89,8 +91,9 @@
 
                 <div class="form-row align-items-center">
                     <div class="form-group col-md-8">
-                        <label class="my-1 mr-2" for="infringe_rights">Do you think DNA fingerprinting infringes upon
-                            our rights? </label>
+                        <label class="my-1 mr-2" for="infringe_rights">Do you think DNA fingerprinting <span
+                                class="text-light-green">infringes</span> upon
+                            our <span class="text-light-green">rights</span>? </label>
                     </div>
                     <div class="form-group col-md-4">
                         <select class="custom-select my-1 mr-sm-2" id="infringe_rights" required>
@@ -107,7 +110,8 @@
 
                 <div class="form-row align-items-center">
                     <div class="form-group col-md-8">
-                        <label class="my-1 mr-2" for="national_db">How much do you support a national database of DNA
+                        <label class="my-1 mr-2" for="national_db">How much do you support a <span
+                                class="text-light-green">national database</span> of DNA
                             data?</label>
                     </div>
                     <div class="form-group col-md-4">
@@ -125,8 +129,9 @@
 
                 <div class="form-row align-items-center">
                     <div class="form-group col-md-8">
-                        <label class="my-1 mr-2" for="racial_discrim">Do you think that DNA fingerprinting is racially
-                            discriminatory?</label>
+                        <label class="my-1 mr-2" for="racial_discrim">Do you think that DNA fingerprinting is <span
+                                class="text-light-green">racially
+                                discriminatory</span>?</label>
                     </div>
                     <div class="form-group col-md-4">
                         <select class="custom-select my-1 mr-sm-2" id="racial_discrim" required>
@@ -143,7 +148,8 @@
 
                 <div class="form-row align-items-center">
                     <div class="form-group col-md-8">
-                        <label class="my-1 mr-2" for="biggest_issue">What is the biggest issue that you see with DNA
+                        <label class="my-1 mr-2" for="biggest_issue">What is the biggest <span
+                                class="text-light-green">issue</span> that you see with DNA
                             fingerprinting?</label>
                     </div>
                     <div class="form-group col-md-4">
@@ -158,7 +164,8 @@
 
                 <div class="form-row align-items-center">
                     <div class="form-group col-md-8">
-                        <label class="my-1 mr-2" for="biggest_benefit">What is the biggest benefit that you see with DNA
+                        <label class="my-1 mr-2" for="biggest_benefit">What is the biggest <span
+                                class="text-light-green">benefit</span> that you see with DNA
                             fingerprinting?</label>
                     </div>
                     <div class="form-group col-md-4">
