--- a/about.html
+++ b/about.html
@@ -104,12 +104,14 @@
     </section>
 
     <section class="navbar">
-        <div class="container d-flex justify-content-end">
-            <p class="lead">
-                <a href="./research.html">Next Page</a>
+        <div class="container text-center">
+            <p class="lead text-center mx-auto">
+                <a href="./research.html">Keep going on our journey...</a>
             </p>
         </div>
     </section>
+
+    <div class="separator"></div>
 
 
 
