--- a/research.html
+++ b/research.html
@@ -14,6 +14,13 @@
 
 <body>
 
+    <section class="navbar">
+        <div class="container text-center">
+            <p class="lead text-center mx-auto">
+                <a href="./ethics.html">Keep going on our journey...</a>
+            </p>
+        </div>
+    </section>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.slim.js"></script>
