--- a/survey.html
+++ b/survey.html
@@ -196,7 +196,22 @@
                 </div>
             </form>
 
-            <h1 id="thanks" class="hidden">Thank you for your response!</h1>
+            <div class="hidden" id="thanks">
+
+                <h1>Thank you for your response!</h1>
+
+                <!-- TODO: uncomment before turning in -->
+                <!-- <section class="navbar">
+                    <div class="container text-center">
+                        <p class="lead text-center mx-auto">
+                            <a href="./data.html">Keep going on our journey...</a>
+                        </p>
+                    </div>
+                </section> -->
+
+            </div>
+
+
         </div>
     </section>
 
