Minor spelling edits

--- a/data.html
+++ b/data.html
@@ -18,7 +18,7 @@
 
     <section class="mt-4">
         <div class="container">
-            <h1 class="text-center">Public Opinnion on <span class="text-light-green">DNA Fingerprinting</span></h1>
+            <h1 class="text-center">Public Opinion on <span class="text-light-green">DNA Fingerprinting</span></h1>
 
             <!-- row 1 -->
             <div class="row">
