--- a/survey.html
+++ b/survey.html
@@ -24,7 +24,7 @@
         <div class="page-width">
             <div class="video-hero--content">
                 <h1>DNA Fingerprinting <span class="text-light-green">Survey</span></h1>
-                <p>All responses are anonymus. Data is used for research on public opinnion on DNA Fingerprinting.</p>
+                <p>All responses are anonymous. Data is used for research on public opinion on DNA Fingerprinting.</p>
             </div>
         </div>
     </div>
