reword example lab id

--- a/about.html
+++ b/about.html
@@ -57,12 +57,14 @@
             <p>VNTR’s are inherited from one generation to the next</p>
 
             <h3 class="text-wheat bold">Example of Lab Identification</h3>
-            <p>A given person's VNTRs come from the genetic information donated by his or her parents; he or she could
-                have VNTRs inherited from his or her mother or father, or a combination, but never a VNTR either of his
-                or her parents do not have. Shown below are the VNTR patterns for Mrs. Nguyen [blue], Mr. Nguyen
-                [yellow], and their four children: D1 (the Nguyens' biological daughter), D2 (Mr. Nguyen's
-                step-daughter, child of Mrs. Nguyen and her former husband [red]), S1 (the Nguyens' biological son), and
-                S2 (the Nguyens' adopted son, not biologically related [his parents are light and dark green]).</p>
+
+            <p>A person's VNTRs comes from the genetic information donated by their parents. Therefore, they must have
+                VNTRs from their their mother or father: it is not possible for them to have VNTRs that either of their
+                parents do not have. A person with a VNTR is likely to have a similar number of repeats to their close
+                relatives than people
+                more distantly related to them and strangers. In the example below, it can be seen that S2 is clearly
+                not the biological son of mom or dad, because they have a VNTR (the lowest one down) is not from either
+                the mother or father.</p>
             <div class="text-center">
                 <img src="./img/vntr.gif" alt="" class="img-fluid">
             </div>
